--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -34,7 +34,6 @@
 
   <body>
     <div class="website-wrapper">
-
       <nav class="navbar navbar-expand-lg px-3 px-md-4 px-lg-5 fixed-top">
         <div class="container-fluid">
           <a href="/" class="logo-container navbar-brand">
@@ -103,7 +102,7 @@
         </div>
 
         <h1 id="hero-header">
-          Transforme a Gestão da Sua Empresa com o Nosso Poderoso Sistema ERP
+          Transforme a Gestão da Sua Empresa com o Fystem@!
         </h1>
       </section>
 
@@ -146,7 +145,7 @@
             class="col-xl-6 col-lg-6 col-md-6 d-flex flex-column justify-content-center gap-3"
           >
             <h1 class="feature-header">
-              Flexibilidade para montar um ERP de acordo com o seu tamanho
+              Com o Fystem@ você tem a flexibilidade e organização necessárias independente do seu tamanho
             </h1>
             <p class="feature-paragraph">
               Com uma gama robusta de funcionalidades, nossa plataforma é
@@ -173,7 +172,7 @@
               Liberdade de Acesso em Qualquer Lugar
             </h1>
             <p class="feature-paragraph">
-              Com o nosso Sistema ERP baseado na nuvem, você tem a liberdade de
+              Com o Fystem@ baseado na nuvem, você tem a liberdade de
               gerenciar e monitorar as operações da sua empresa a partir de
               qualquer dispositivo, em qualquer lugar. Seja no escritório, em
               casa ou em trânsito, a nossa plataforma oferece acesso conveniente
@@ -310,7 +309,7 @@
         >
           <div class="col-xl-4 col-lg-4 d-flex flex-column gap-4">
             <h1 id="form-main-header">
-              Se interessou? Entre em contato com a gente!
+              Se interessou? Agende uma demonstração!
             </h1>
             <img
               src="../images/mail-1454731_1280.png"
@@ -385,7 +384,7 @@
           id="mobile-form"
         >
           <div class="form-header d-flex gap-2 align-items-center">
-            <h3>Se interessou? Entre em contato com a gente!</h3>
+            <h3>Se interessou? Agende uma demonstração!</h3>
             <img
               src="../images/mail-1454731_1280.png"
               alt=""
@@ -465,7 +464,8 @@
                 <span>+55 (81) 1234-5678</span>
               </em>
               <em class="d-block mb-2">
-                Endereço: Estrada do Encanamento, 12, Recife
+                Endereço: Av. Conselheiro Rosa e Silva, 1460 - 
+                Empresarial ETC, 1° Andar, Recife
               </em>
             </div>
           </div>
@@ -534,7 +534,7 @@
           lName: $("#lName").val(),
           subject: $("#assunto").val(),
           email: $("#email").val(),
-          message: $("#message").val()
+          message: $("#message").val(),
         };
 
         console.log(data);
@@ -559,7 +559,7 @@
           lName: $("#lName-mobile").val(),
           subject: $("#assunto-mobile").val(),
           email: $("#email-mobile").val(),
-          message: $("#message-mobile").val()
+          message: $("#message-mobile").val(),
         };
 
         console.log(data);
