--- a/public/pages/sobre.html
+++ b/public/pages/sobre.html
@@ -62,7 +62,7 @@
                 <a href="/Solucoes" class="nav-link">Soluções</a>
               </li>
               <li class="nav-item mx-3">
-                <a href="#contato" class="nav-link">Contato</a>
+                <a href="/#contato" class="nav-link">Contato</a>
               </li>
             </ul>
           </div>
