--- a/public/pages/solucoes.html
+++ b/public/pages/solucoes.html
@@ -21,11 +21,11 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/logos.css" />
-    <link rel="stylesheet" href="css/navbar.css" />
-    <link rel="stylesheet" href="css/footer.css" />
-    <link rel="stylesheet" href="css/solucoes/hero.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/logos.css" />
+    <link rel="stylesheet" href="../css/navbar.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/solucoes/hero.css" />
   </head>
   <body>
     <div class="website-wrapper">
@@ -66,14 +66,14 @@
                 <a href="/Solucoes" class="nav-link">Soluções</a>
               </li>
               <li class="nav-item mx-3">
-                <a href="#contato" class="nav-link">Contato</a>
+                <a href="/#contato" class="nav-link">Contato</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
 
-      <section
+      <!-- <section
         id="hero"
         class="container-fluid py-5 px-4 d-flex flex-column gap-5"
       >
@@ -84,7 +84,7 @@
           <div class="col">
             <div class="card rounded-5">
               <img
-                src="images/illustration-agro-removebg-preview.png"
+                src="../images/illustration-agro-removebg-preview.png"
                 alt=""
                 class="card-img"
               />
@@ -104,7 +104,7 @@
           <div class="col">
             <div class="card rounded-5" id="card2">
               <img
-                src="images/illustration-vet-small__1_-removebg-preview.png"
+                src="../images/illustration-vet-small__1_-removebg-preview.png"
                 alt=""
                 id="img-card-2"
                 class="card-img p-4"
@@ -125,7 +125,7 @@
           <div class="col">
             <div class="card rounded-5" id="card2">
               <img
-                src="images/ilustração-vet.jpg"
+                src="../images/ilustração-vet.jpg"
                 alt=""
                 class="card-img px-3"
               />
@@ -143,9 +143,46 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
-      <section id=""></section>
+      <section id="carousel-hero">
+        <div
+          id="carouselExampleAutoplaying"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <h1>Fystem@ Web</h1>
+              <p>O nosso maior e mais poderoso sistema. Capaz lhe ajudar com questões fiscais, financeiras, controle de estoque e muito mais!</p>
+            </div>
+            <div class="carousel-item">
+              <img src="..." class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="..." class="d-block w-100" alt="..." />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
 
       <footer class="container-fluid p-5 g-5">
         <div class="row">
