finish hero section from solutions page

--- a/public/pages/solucoes.html
+++ b/public/pages/solucoes.html
@@ -73,100 +73,66 @@
         </div>
       </nav>
 
-      <!-- <section
-        id="hero"
-        class="container-fluid py-5 px-4 d-flex flex-column gap-5"
-      >
-        <h1 id="hero-header" class="text-center">
-          Não importa sua área de atuação, temos uma solução para seu negócio!
-        </h1>
-        <div class="row">
-          <div class="col">
-            <div class="card rounded-5">
-              <img
-                src="../images/illustration-agro-removebg-preview.png"
-                alt=""
-                class="card-img"
-              />
-
-              <div class="card-body p-5 d-flex flex-column gap-3">
-                <h4 class="card-title">Fystem@ Agro</h4>
-                <p class="card-text">
-                  Potencialize sua produção com um software inteligente que
-                  simplifica todas as etapas da sua operação, personalize
-                  conforme as suas necessidades e veja seu agronegócio
-                  prosperar!
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card rounded-5" id="card2">
-              <img
-                src="../images/illustration-vet-small__1_-removebg-preview.png"
-                alt=""
-                id="img-card-2"
-                class="card-img p-4"
-              />
-
-              <div class="card-body p-5 d-flex flex-column gap-3">
-                <h4 class="card-title">Fystem@ Vet</h4>
-                <p class="card-text">
-                  O Fystem@ Vet é a solução completa para a gestão eficiente da
-                  sua clínica veterinária, com agendamento simplificado e
-                  registros eletrônicos, você proporciona uma experiência
-                  veterinária excepcional para seus clientes.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card rounded-5" id="card2">
-              <img
-                src="../images/ilustração-vet.jpg"
-                alt=""
-                class="card-img px-3"
-              />
-
-              <div class="card-body p-5 d-flex flex-column gap-3">
-                <h4 class="card-title">Fystem@ Web</h4>
-                <p class="card-text">
-                  Transforme a gestão da sua pequena empresa com o Fystem@ Web,
-                  proporcionando simplicidade e eficiência. Gerencie finanças,
-                  controle de estoque e interação com clientes. Alcance o
-                  sucesso com a ferramenta ideal para impulsionar o
-                  crescimento do seu negócio.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section> -->
-
       <section id="carousel-hero">
         <div
-          id="carouselExampleAutoplaying"
+          id="carouselExampleManual"
           class="carousel slide"
           data-bs-ride="carousel"
         >
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <h1>Fystem@ Web</h1>
-              <p>O nosso maior e mais poderoso sistema. Capaz lhe ajudar com questões fiscais, financeiras, controle de estoque e muito mais!</p>
+              <div class="bg-img"></div>
+
+              <article class="carousel-text">
+                <h1>Fystem@ Web <i class="fa-solid fa-cloud"></i></h1>
+                <p>
+                  O nosso maior e mais poderoso sistema. Capaz lhe ajudar com
+                  questões fiscais, financeiras, controle de estoque e muito
+                  mais!
+                </p>
+              </article>
             </div>
             <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="..." />
+              <div class="bg-img"></div>
+
+              <article class="carousel-text">
+                <h1>Fystem@ Agro <i class="fa-solid fa-seedling"></i></h1>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dolorem eligendi numquam ut! Eligendi nulla assumenda nostrum
+                  ut, deserunt similique animi!
+                </p>
+              </article>
             </div>
             <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="..." />
+              <div class="bg-img"></div>
+
+              <article class="carousel-text">
+                <h1>Fystem@ Vet <i class="fa-solid fa-paw"></i></h1>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Expedita provident hic est maxime tempore cumque, unde
+                  veritatis quasi odio qui!
+                </p>
+              </article>
+            </div>
+            <div class="carousel-item">
+              <div class="bg-img"></div>
+
+              <article class="carousel-text">
+                <h1>Fystem@ Clínicas <i class="fa-solid fa-laptop-medical"></i></h1>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Expedita provident hic est maxime tempore cumque, unde
+                  veritatis quasi odio qui!
+                </p>
+              </article>
             </div>
           </div>
           <button
             class="carousel-control-prev"
             type="button"
-            data-bs-target="#carouselExampleAutoplaying"
+            data-bs-target="#carouselExampleManual"
             data-bs-slide="prev"
           >
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -175,7 +141,7 @@
           <button
             class="carousel-control-next"
             type="button"
-            data-bs-target="#carouselExampleAutoplaying"
+            data-bs-target="#carouselExampleManual"
             data-bs-slide="next"
           >
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
@@ -250,5 +216,11 @@
         </div>
       </footer>
     </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
