complete hero text and add section about flexibility on solutions page

--- a/public/pages/solucoes.html
+++ b/public/pages/solucoes.html
@@ -7,9 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Montserrat:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+
     <script
       src="https://kit.fontawesome.com/6e5ace0a19.js"
       crossorigin="anonymous"
@@ -26,6 +27,7 @@
     <link rel="stylesheet" href="../css/navbar.css" />
     <link rel="stylesheet" href="../css/footer.css" />
     <link rel="stylesheet" href="../css/solucoes/hero.css" />
+    <link rel="stylesheet" href="../css/solucoes/accordion.css" />
   </head>
   <body>
     <div class="website-wrapper">
@@ -84,7 +86,10 @@
               <div class="bg-img"></div>
 
               <article class="carousel-text">
-                <h1>Fystem@ Web <i class="fa-solid fa-cloud"></i></h1>
+                <h1>
+                  Fystem<span class="at-sign-1">@</span> Web
+                  <i class="fa-solid fa-cloud"></i>
+                </h1>
                 <p>
                   O nosso maior e mais poderoso sistema. Capaz lhe ajudar com
                   questões fiscais, financeiras, controle de estoque e muito
@@ -96,11 +101,13 @@
               <div class="bg-img"></div>
 
               <article class="carousel-text">
-                <h1>Fystem@ Agro <i class="fa-solid fa-seedling"></i></h1>
+                <h1>
+                  Fystem<span class="at-sign-2">@</span> Agro
+                  <i class="fa-solid fa-seedling"></i>
+                </h1>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Dolorem eligendi numquam ut! Eligendi nulla assumenda nostrum
-                  ut, deserunt similique animi!
+                  Cultive o sucesso de sua operação agrícola com o Fystem@ Agro:
+                  o poder da tecnologia no coração do campo!
                 </p>
               </article>
             </div>
@@ -108,11 +115,13 @@
               <div class="bg-img"></div>
 
               <article class="carousel-text">
-                <h1>Fystem@ Vet <i class="fa-solid fa-paw"></i></h1>
+                <h1>
+                  Fystem<span class="at-sign-3">@</span> Vet
+                  <i class="fa-solid fa-paw"></i>
+                </h1>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Expedita provident hic est maxime tempore cumque, unde
-                  veritatis quasi odio qui!
+                  Do consultório à excelência veterinária, o Fystem@ Vet é a
+                  chave para cuidados animais de última geração!
                 </p>
               </article>
             </div>
@@ -120,11 +129,13 @@
               <div class="bg-img"></div>
 
               <article class="carousel-text">
-                <h1>Fystem@ Clínicas <i class="fa-solid fa-laptop-medical"></i></h1>
+                <h1>
+                  Fystem<span class="at-sign-4">@</span> Clínicas
+                  <i class="fa-solid fa-laptop-medical"></i>
+                </h1>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Expedita provident hic est maxime tempore cumque, unde
-                  veritatis quasi odio qui!
+                  Na interseção da saúde e inovação, o Fystem@ Clínicas redefine
+                  a gestão para um atendimento médico eficiente e compassivo!
                 </p>
               </article>
             </div>
@@ -149,6 +160,100 @@
           </button>
         </div>
       </section>
+
+      <section id="flexible" class="p-5 container-fluid">
+        <h1 class="accordion-title mb-5 text-center">
+          Nossas soluções são adaptáveis para atender às suas necessidades
+          exclusivas.
+        </h1>
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseOne"
+                aria-expanded="false"
+                aria-controls="flush-collapseOne"
+              >
+                <h3 class="accordion-header">
+                  <span class="colored-span ocean-blue">Customização</span> Flexível
+                </h3>
+              </button>
+            </h2>
+            <div
+              id="flush-collapseOne"
+              class="accordion-collapse collapse"
+              data-bs-parent="#accordionFlushExample"
+            >
+              <div class="accordion-body">
+                Oferecemos um nível incomparável de customização. Desde a
+                estrutura do sistema até os fluxos de trabalho, adaptamos cada
+                aspecto para alinhar-se perfeitamente com suas operações
+                exclusivas
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseTwo"
+                aria-expanded="false"
+                aria-controls="flush-collapseTwo"
+              >
+                <h3 class="accordion-header">
+                  Módulos <span class="colored-span green">Personalizados</span>
+                </h3>
+              </button>
+            </h2>
+            <div
+              id="flush-collapseTwo"
+              class="accordion-collapse collapse"
+              data-bs-parent="#accordionFlushExample"
+            >
+              <div class="accordion-body">
+                Crie uma solução que seja verdadeiramente sua. Escolha entre uma
+                variedade de módulos personalizados para construir a
+                configuração ideal para o seu negócio.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseThree"
+                aria-expanded="false"
+                aria-controls="flush-collapseThree"
+              >
+                <h3 class="accordion-header">
+                  <span class="colored-span grayish-blue">Escalabilidade</span> Garantida
+                </h3>
+              </button>
+            </h2>
+            <div
+              id="flush-collapseThree"
+              class="accordion-collapse collapse"
+              data-bs-parent="#accordionFlushExample"
+            >
+              <div class="accordion-body">
+                Não importa o tamanho do seu negócio hoje; nossas soluções são
+                escaláveis. Cresça sem preocupações, sabendo que sua plataforma
+                pode evoluir conforme suas necessidades.
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </section>
+
+      <section></section>
 
       <footer class="container-fluid p-5 g-5">
         <div class="row">
