add fiscal section to solutions page

--- a/public/pages/solucoes.html
+++ b/public/pages/solucoes.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="../css/footer.css" />
     <link rel="stylesheet" href="../css/solucoes/hero.css" />
     <link rel="stylesheet" href="../css/solucoes/accordion.css" />
+    <link rel="stylesheet" href="../css/solucoes/fiscal.css" />
   </head>
   <body>
     <div class="website-wrapper">
@@ -161,7 +162,7 @@
         </div>
       </section>
 
-      <section id="flexible" class="p-5 container-fluid">
+      <section id="flexible" class="p-5 container-fluid mb-5">
         <h1 class="accordion-title mb-5 text-center">
           Nossas soluções são adaptáveis para atender às suas necessidades
           exclusivas.
@@ -178,7 +179,8 @@
                 aria-controls="flush-collapseOne"
               >
                 <h3 class="accordion-header">
-                  <span class="colored-span ocean-blue">Customização</span> Flexível
+                  <span class="colored-span ocean-blue">Customização</span>
+                  Flexível
                 </h3>
               </button>
             </h2>
@@ -233,7 +235,8 @@
                 aria-controls="flush-collapseThree"
               >
                 <h3 class="accordion-header">
-                  <span class="colored-span grayish-blue">Escalabilidade</span> Garantida
+                  <span class="colored-span grayish-blue">Escalabilidade</span>
+                  Garantida
                 </h3>
               </button>
             </h2>
@@ -250,10 +253,65 @@
             </div>
           </div>
         </div>
-
       </section>
 
-      <section></section>
+      <section id="fiscal" class="container-fluid p-5 my-5">
+        <div class="row">
+          <div class="col-md-6">
+            <article class="fiscal-main-header py-3">
+              <h5 class="titulo-ferramenta">Parceria Estratégica:</h5>
+              <h1 class="colored-big-header">
+                Otimizando a Colaboração entre Empresário e Contador
+              </h1>
+            </article>
+          </div>
+
+          <div class="col-md-6">
+            <article class="py-3">
+              <h5 class="titulo-ferramenta">
+                Ferramentas Avançadas de Gestão Fiscal
+              </h5>
+              <p class="descricao-ferramenta">
+                Desenvolvemos ferramentas avançadas para simplificar a gestão
+                fiscal. Desde a emissão de notas fiscais até o acompanhamento de
+                obrigações tributárias, nossas funcionalidades são projetadas
+                para manter sua empresa em conformidade, evitando multas e
+                penalidades
+              </p>
+            </article>
+          </div>
+
+          <div class="col-md-6">
+            <article class="py-3">
+              <h5 class="titulo-ferramenta">
+                Controle Financeiro Preciso e Integrado
+              </h5>
+              <p class="descricao-ferramenta">
+                Aprofunde-se no controle financeiro com uma abordagem integrada.
+                Nosso sistema permite monitorar receitas, despesas e fluxo de
+                caixa em tempo real. Automatize processos financeiros para
+                eliminar erros e garantir uma visão precisa das finanças da
+                empresa.
+              </p>
+            </article>
+          </div>
+
+          <div class="col-md-6">
+            <article class="py-3 d-flex flex-column gap-4">
+              <h1 class="colored-big-header">
+                Descubra como elevar a gestão fiscal e financeira da sua empresa.
+              </h1>
+              <button class="btn btn-lg btn-outline-primary align-self-center">
+                Fale com a gente!
+              </button>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <section id="vendas" class="p-5 container-fluid">
+        
+      </section>
 
       <footer class="container-fluid p-5 g-5">
         <div class="row">
