complete sales section in solutions page

--- a/public/pages/solucoes.html
+++ b/public/pages/solucoes.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="../css/solucoes/hero.css" />
     <link rel="stylesheet" href="../css/solucoes/accordion.css" />
     <link rel="stylesheet" href="../css/solucoes/fiscal.css" />
+    <link rel="stylesheet" href="../css/solucoes/vendas.css" />
   </head>
   <body>
     <div class="website-wrapper">
@@ -256,7 +257,7 @@
       </section>
 
       <section id="fiscal" class="container-fluid p-5 my-5">
-        <div class="row">
+        <div class="row g-3">
           <div class="col-md-6">
             <article class="fiscal-main-header py-3">
               <h5 class="titulo-ferramenta">Parceria Estratégica:</h5>
@@ -299,7 +300,8 @@
           <div class="col-md-6">
             <article class="py-3 d-flex flex-column gap-4">
               <h1 class="colored-big-header">
-                Descubra como elevar a gestão fiscal e financeira da sua empresa.
+                Descubra como elevar a gestão fiscal e financeira da sua
+                empresa.
               </h1>
               <button class="btn btn-lg btn-outline-primary align-self-center">
                 Fale com a gente!
@@ -310,7 +312,75 @@
       </section>
 
       <section id="vendas" class="p-5 container-fluid">
-        
+        <h1 class="vendas-main-header text-center mb-5">
+          Muito Fácil de Alavancar Suas Vendas: Descubra Nossa Poderosa
+          Interface para Operações Comerciais
+        </h1>
+        <div class="row">
+          <div class="col-md-3">
+            <div class="card p-3 d-flex flex-column gap-4 rounded-4">
+              <i
+                class="fa-solid fa-box fa-5x align-self-center justify-self-center m-3"
+              ></i>
+              <div class="card-body d-flex flex-column gap-3">
+                <h5 class="card-title">Cadastro Simplificado de Produtos</h5>
+                <p class="card-text">
+                  Aumente a produtividade com um processo intuitivo de cadastro
+                  de produtos. Nosso sistema facilita a adição, edição e
+                  exclusão de produtos, permitindo que você mantenha um catálogo
+                  atualizado de forma descomplicada.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="card p-3 d-flex flex-column gap-4 rounded-4">
+              <i
+                class="fa-solid fa-boxes-stacked fa-5x align-self-center justify-self-center m-3"
+              ></i>
+              <div class="card-body d-flex flex-column gap-3">
+                <h5 class="card-title">Controle de Estoque em Tempo Real</h5>
+                <p class="card-text">
+                  Mantenha-se no controle total do seu estoque. A interface
+                  fornece atualizações em tempo real sobre a disponibilidade de
+                  produtos, evitando vendas não atendidas e otimizando a gestão
+                  de inventário.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="card p-3 d-flex flex-column gap-4 rounded-4">
+              <i
+                class="fa-solid fa-circle-check fa-5x align-self-center justify-self-center m-3"
+              ></i>
+              <div class="card-body d-flex flex-column gap-3">
+                <h5 class="card-title">
+                  Fechamento de Vendas Rápido
+                </h5>
+                <p class="card-text">
+                  Otimize o processo de fechamento de vendas com um fluxo de trabalho ágil. Desde a seleção de produtos até a aplicação de descontos e promoções, nossa interface garante uma transição suave para fechar vendas de forma eficiente.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="card p-3 d-flex flex-column gap-4 rounded-4">
+              <i
+                class="fa-solid fa-receipt fa-5x align-self-center justify-self-center m-3"
+              ></i>
+              <div class="card-body d-flex flex-column gap-3">
+                <h5 class="card-title">Emissão de Notas Fiscais</h5>
+                <p class="card-text">
+                  Simplifique a burocracia fiscal com a emissão de notas fiscais direto da nossa interface. Adapte-se facilmente a diferentes tipos de notas fiscais, garantindo conformidade fiscal e agilizando o processo documental.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
 
       <footer class="container-fluid p-5 g-5">
