add crm section to solutions page

--- a/public/pages/solucoes.html
+++ b/public/pages/solucoes.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="../css/solucoes/accordion.css" />
     <link rel="stylesheet" href="../css/solucoes/fiscal.css" />
     <link rel="stylesheet" href="../css/solucoes/vendas.css" />
+    <link rel="stylesheet" href="../css/solucoes/crm.css" />
   </head>
   <body>
     <div class="website-wrapper">
@@ -93,7 +94,7 @@
                   <i class="fa-solid fa-cloud"></i>
                 </h1>
                 <p>
-                  O nosso maior e mais poderoso sistema. Capaz lhe ajudar com
+                  O nosso maior e mais poderoso sistema. Capaz de lhe ajudar com
                   questões fiscais, financeiras, controle de estoque e muito
                   mais!
                 </p>
@@ -311,7 +312,7 @@
         </div>
       </section>
 
-      <section id="vendas" class="p-5 container-fluid">
+      <section id="vendas" class="p-5 container-fluid my-5">
         <h1 class="vendas-main-header text-center mb-5">
           Muito Fácil de Alavancar Suas Vendas: Descubra Nossa Poderosa
           Interface para Operações Comerciais
@@ -357,11 +358,12 @@
                 class="fa-solid fa-circle-check fa-5x align-self-center justify-self-center m-3"
               ></i>
               <div class="card-body d-flex flex-column gap-3">
-                <h5 class="card-title">
-                  Fechamento de Vendas Rápido
-                </h5>
+                <h5 class="card-title">Fechamento de Vendas Rápido</h5>
                 <p class="card-text">
-                  Otimize o processo de fechamento de vendas com um fluxo de trabalho ágil. Desde a seleção de produtos até a aplicação de descontos e promoções, nossa interface garante uma transição suave para fechar vendas de forma eficiente.
+                  Otimize o processo de fechamento de vendas com um fluxo de
+                  trabalho ágil. Desde a seleção de produtos até a aplicação de
+                  descontos e promoções, nossa interface garante uma transição
+                  suave para fechar vendas de forma eficiente.
                 </p>
               </div>
             </div>
@@ -375,10 +377,71 @@
               <div class="card-body d-flex flex-column gap-3">
                 <h5 class="card-title">Emissão de Notas Fiscais</h5>
                 <p class="card-text">
-                  Simplifique a burocracia fiscal com a emissão de notas fiscais direto da nossa interface. Adapte-se facilmente a diferentes tipos de notas fiscais, garantindo conformidade fiscal e agilizando o processo documental.
+                  Simplifique a burocracia fiscal com a emissão de notas fiscais
+                  direto da nossa interface. Adapte-se facilmente a diferentes
+                  tipos de notas fiscais, garantindo conformidade fiscal e
+                  agilizando o processo documental.
                 </p>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="crm" class="p-5 container-fluid my-5">
+        <div class="row gx-5 mb-5">
+          <div class="col-md-6 d-flex flex-column justify-content-center">
+            <article>
+              <h5>Construa Relacionamentos Sólidos:</h5>
+              <h1 class="colored-blue sales-main-header">
+                Potencialize Seus Vínculos com o CRM Integrado
+              </h1>
+              <p class="sales-paragraph">
+                Concentre todas as interações relevantes em um único lugar.
+                Nosso CRM abrangente é centralizado em clientes, funcionários e
+                fornecedores, proporcionando uma visão 360 graus para aprimorar
+                seus relacionamentos.
+              </p>
+            </article>
+            <div class="mt-3">
+              <button type="button" class="btn btn-primary">
+                Tenho interesse
+              </button>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <img src="../images/sales.jpg" alt="" class="img-fluid rounded-3" />
+          </div>
+        </div>
+
+        <div class="row gx-4">
+          <div class="col-md-4">
+            <h3 class="mb-3 crm-title colored-blue">Permissões de Acesso</h3>
+            <p class="sales-paragraph">
+              Mantenha o controle sobre o acesso aos dados. Atribua permissões
+              personalizadas para garantir que cada usuário tenha acesso apenas
+              às informações relevantes ao seu papel, assegurando a segurança
+              dos dados e a conformidade com as políticas internas.
+            </p>
+          </div>
+          <div class="col-md-4">
+            <h3 class="mb-3 crm-title colored-blue">Gestão da Folha de Pagamento</h3>
+            <p class="sales-paragraph">
+              Simplifique processos de pagamento e recompensas. Integramos a
+              gestão da folha de pagamento ao CRM, proporcionando uma visão
+              completa do histórico financeiro de clientes, funcionários e
+              fornecedores para uma gestão financeira mais eficaz.
+            </p>
+          </div>
+          <div class="col-md-4">
+            <h3 class="mb-3 crm-title colored-blue">Comunicação Facilitada</h3>
+            <p class="sales-paragraph">
+              Simplifique a comunicação com ferramentas integradas. Nossa
+              solução CRM inclui recursos de comunicação para facilitar a
+              interação, como e-mails automáticos, lembretes de follow-up e
+              registros de chamadas, mantendo todos os stakeholders informados e
+              engajados.
+            </p>
           </div>
         </div>
       </section>
