finish solutions page

--- a/public/pages/solucoes.html
+++ b/public/pages/solucoes.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="../css/solucoes/fiscal.css" />
     <link rel="stylesheet" href="../css/solucoes/vendas.css" />
     <link rel="stylesheet" href="../css/solucoes/crm.css" />
+    <link rel="stylesheet" href="../css/solucoes/treinamento.css" />
   </head>
   <body>
     <div class="website-wrapper">
@@ -88,7 +89,7 @@
             <div class="carousel-item active">
               <div class="bg-img"></div>
 
-              <article class="carousel-text">
+              <article class="carousel-text text-center">
                 <h1>
                   Fystem<span class="at-sign-1">@</span> Web
                   <i class="fa-solid fa-cloud"></i>
@@ -103,7 +104,7 @@
             <div class="carousel-item">
               <div class="bg-img"></div>
 
-              <article class="carousel-text">
+              <article class="carousel-text text-center">
                 <h1>
                   Fystem<span class="at-sign-2">@</span> Agro
                   <i class="fa-solid fa-seedling"></i>
@@ -117,7 +118,7 @@
             <div class="carousel-item">
               <div class="bg-img"></div>
 
-              <article class="carousel-text">
+              <article class="carousel-text text-center">
                 <h1>
                   Fystem<span class="at-sign-3">@</span> Vet
                   <i class="fa-solid fa-paw"></i>
@@ -131,7 +132,7 @@
             <div class="carousel-item">
               <div class="bg-img"></div>
 
-              <article class="carousel-text">
+              <article class="carousel-text text-center">
                 <h1>
                   Fystem<span class="at-sign-4">@</span> Clínicas
                   <i class="fa-solid fa-laptop-medical"></i>
@@ -317,7 +318,7 @@
           Muito Fácil de Alavancar Suas Vendas: Descubra Nossa Poderosa
           Interface para Operações Comerciais
         </h1>
-        <div class="row">
+        <div class="row gy-5">
           <div class="col-md-3">
             <div class="card p-3 d-flex flex-column gap-4 rounded-4">
               <i
@@ -389,7 +390,7 @@
       </section>
 
       <section id="crm" class="p-5 container-fluid my-5">
-        <div class="row gx-5 mb-5">
+        <div class="row g-5 g-5 mb-5">
           <div class="col-md-6 d-flex flex-column justify-content-center">
             <article>
               <h5>Construa Relacionamentos Sólidos:</h5>
@@ -414,7 +415,7 @@
           </div>
         </div>
 
-        <div class="row gx-4">
+        <div class="row gx-4 gy-3">
           <div class="col-md-4">
             <h3 class="mb-3 crm-title colored-blue">Permissões de Acesso</h3>
             <p class="sales-paragraph">
@@ -425,7 +426,9 @@
             </p>
           </div>
           <div class="col-md-4">
-            <h3 class="mb-3 crm-title colored-blue">Gestão da Folha de Pagamento</h3>
+            <h3 class="mb-3 crm-title colored-blue">
+              Gestão da Folha de Pagamento
+            </h3>
             <p class="sales-paragraph">
               Simplifique processos de pagamento e recompensas. Integramos a
               gestão da folha de pagamento ao CRM, proporcionando uma visão
@@ -443,6 +446,25 @@
               engajados.
             </p>
           </div>
+        </div>
+      </section>
+
+      <section id="treinamento" class="container-fluid p-5 mt-5 text-center d-flex flex-column justify-content-center gap-5">
+        <div class="treinamento-bg-img"></div>
+        <article>
+          <h1 class="treinamento-main-header mb-4">
+            Investindo no Seu Sucesso: Treinamento Incluso e Suporte Premium com
+            o Fystem@ ERP
+          </h1>
+          <p class="treinamento-description">Valorizamos seu sucesso desde o início. O treinamento especializado no Fystem@ ERP é uma cortesia, garantindo que você e sua equipe obtenham o máximo benefício sem custos adicionais.</p>
+        </article>
+        <div class="btn-container d-flex gap-3 justify-content-center">
+          <button class="btn btn-lg btn-primary">
+            Entre em contato
+          </button>
+          <button class="btn btn-lg btn-outline-primary">
+            Saiba mais
+          </button>
         </div>
       </section>
 
